# Kami

./: .gitignore  CHANGELOG.txt  README.md  __init__.py  dashboard.py  distributions.py  main.py  pyproject.toml  requirements.txt  test_BinomialDist.py  test_ChiDist.py  test_Exponential.py  test_HypergDist.py  test_NegBinomialDist.py  test_PoissonDist.py  tests_distributions.py
KamiStats/: __init__.py
test_scripts/: __init__.py  test_BinomialDist.py  test_ChiDist.py  test_Exponential.py  test_FDist.py  test_GammaDist.py  test_Geometric.py  test_HypergDist.py  test_TDist.py  test_UniformDist.py
tests/: BinomialDist.json  ChisDist.json  ExponentialDist.json  FDist.json  GammaDist.json  Geometric.json  HyperGeo.json  NegativeBinomialDist.json  Poisson.json  StudentDist.json  UniformDist.json  __init__.py  test_BinomialDist.py  test_ChiDist.py  test_Exponential.py  test_FDist.py  test_GammaDist.py  test_Geometric.py  test_HypergDist.py  test_NegBinomialDist.py  test_PoissonDist.py  test_TDist.py  test_UniformDist.py  test_cases.json
tests2/: BinomialDist.json  ExponentialDist.json  Geometric.json  HyperGeo.json
